--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="content">
         <h1>documentation</h1>
         <div class="buttons">
-            <a href="#" class="button">
+            <a href="/install" class="button">
                 <img src="https://raw.githubusercontent.com/sys-prozy/wlandrill/main/imgs/web-sym.png" alt="Download Icon" class="icon">
                 Download
             </a>
